Tue, 22 Jan 2008 10:19:46 +0100 <thp@perli.net>
Add "releasetest" target to Makefile (automated testing)

	* Makefile: Add "releasetest" target that can be used to do some
	automatic testing before releases; thanks to Götz Waschk for giving
	some hint on "desktop-entry-validate" :)

Tue, 22 Jan 2008 10:09:16 +0100 <thp@perli.net>
Use Episode Selector for per-channel new episodes

	* src/gpodder/gui.py: Reorganize code to use the episode selector for
	both all-channels and per-channel new episodes
	(Closes: http://gpodder.thegithouse.com/show_bug.cgi?id=14)

Tue, 22 Jan 2008 09:42:01 +0100 <thp@perli.net>
Fix problem in gpodder.desktop file

	* bin/gpodder: We're in development again (+svn)
	* data/gpodder.desktop: Fix problem in .desktop file (Thanks to Götz
	Waschk for reporting this bug, detected via desktop-entry-validate)

Tue, 22 Jan 2008 08:20:33 +0100 <thp@perli.net>
gPodder 0.10.4 "Faster Pussycats Kill" released

	* bin/gpodder: gpodder 0.10.4 released :)
	* README: gPodder 0.10.4 released :)
	* doc/man/gpodder.1: gPodder 0.10.4 released :)
	* data/po/de.po: Updated German translation
	* data/messages.pot: Updated from source
	* data/po/*.po: Updated from messages.pot

Tue, 22 Jan 2008 08:13:42 +0100 <thp@perli.net>
Create Bittorrent download directory on startup

	* src/gpodder/libgpodder.py: Create Bittorrent download directory on
	startup, so the first time gPodder preferences are shown, the download
	folder will exist and now throw an error

Mon, 21 Jan 2008 21:41:59 +0100 <thp@perli.net>
Updated French translation file with correct encoding

	* data/po/fr.po: Updated French translation with correct encoding by
	Jérôme Chabod - thanks!

Mon, 21 Jan 2008 10:47:49 +0100 <thp@perli.net>
Add support for sending files via Bluetooth

	* data/gpodder.glade: Add "Bluetooth" configuration page to
	preferences dialog
	* src/gpodder/config.py: Add Bluetooth-related configuration options
	* src/gpodder/gui.py: Add support for sending (and converting) files