@@ -1,3 +1,11 @@
+Wed, 23 Jan 2008 09:06:32 +0100 <thp@perli.net>
+Do not show notifications when gPodder is minimized
+
+	* src/gpodder/gui.py: Merge patch from Jérôme Chabod to fix problems
+	with the gPodder window re-appearing after having been minimized;
+	use the notification icon when possible; initially reported by Shane
+	Donohoe
+
 Tue, 22 Jan 2008 10:19:46 +0100 <thp@perli.net>
 Add "releasetest" target to Makefile (automated testing)
 
